# MoCoO

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  agent.py  environment.py  pyproject.toml  release.py  setup.cfg
.github/workflows/: publish.yml  test.yml
.ipynb_checkpoints/: agent-checkpoint.py  environment-checkpoint.py  model-checkpoint.py  module-checkpoint.py
