[metadata]
name = mocoo
version = 0.0.1
description = Momentum Contrast ODE-Regularized VAE for Single-Cell RNA Velocity
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/PeterPonyu/MoCoO
author = Peter Ponyu
author_email = peter.ponyu@example.com
license_files = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering :: Bio-Informatics
keywords =
    single-cell
    RNA-seq
    VAE
    ODE
    MoCo
    trajectory
    velocity

[options.packages.find]
where = .
include = mocoo*

[tool:pytest]
testpaths = tests
python_files = test_*.py
python_classes = Test*
python_functions = test_*

[flake8]
max-line-length = 88
extend-ignore = E203, W503
exclude =
    .git,
    __pycache__,
    build,
    dist,
    .venv,
    .tox,
    .eggs,
    *.egg